--- a/TaxCalculator/TaxCalculator.csproj
+++ b/TaxCalculator/TaxCalculator.csproj
@@ -24,4 +24,10 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application\AdditionalSpends" />
+      <Folder Include="Application\Incomes" />
+      <Folder Include="Application\Taxes\Queries" />
+    </ItemGroup>
+
 </Project>
