--- a/TaxCalculator.WebApi/TaxCalculator.WebApi.csproj
+++ b/TaxCalculator.WebApi/TaxCalculator.WebApi.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <RootNamespace>TaxCalculator</RootNamespace>
+        <RootNamespace>TaxCalculator.WebApi</RootNamespace>
         <LangVersion>10</LangVersion>
     </PropertyGroup>
 
