--- a/TaxCalculator.WebFrontend/TaxCalculator.WebFrontend.csproj
+++ b/TaxCalculator.WebFrontend/TaxCalculator.WebFrontend.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TaxCalculator.Cqrs.Implementation\TaxCalculator.Cqrs.Implementation.csproj" />
       <ProjectReference Include="..\TaxCalculator.Domain\TaxCalculator.Domain.csproj" />
       <ProjectReference Include="..\TaxCalculator.Persistence\TaxCalculator.Persistence.csproj" />
       <ProjectReference Include="..\TaxCalculator.Validation\TaxCalculator.Validation.csproj" />
