--- a/TaxCalculator.Application/TaxCalculator.Application.csproj
+++ b/TaxCalculator.Application/TaxCalculator.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\TaxCalculator.Contracts\TaxCalculator.Contracts.csproj" />
       <ProjectReference Include="..\TaxCalculator.Cqrs.Contracts\TaxCalculator.Cqrs.Contracts.csproj" />
+      <ProjectReference Include="..\TaxCalculator.Domain.Services\TaxCalculator.Domain.Services.csproj" />
       <ProjectReference Include="..\TaxCalculator.Persistence\TaxCalculator.Persistence.csproj" />
       <ProjectReference Include="..\TaxCalculator.Validation\TaxCalculator.Validation.csproj" />
     </ItemGroup>
