--- a/TaxCalculator.Domain/TaxCalculator.Domain.csproj
+++ b/TaxCalculator.Domain/TaxCalculator.Domain.csproj
@@ -1,17 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Dtos" />
+      <Compile Remove="Dtos\**" />
+      <EmbeddedResource Remove="Dtos\**" />
+      <None Remove="Dtos\**" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TaxCalculator.Domain.Dto\TaxCalculator.Domain.Dto.csproj" />
     </ItemGroup>
-
 </Project>
